javascript-click-and-add

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,9 +5,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Picture Game</title>
+        <link rel="stylesheet" type="text/css" href="../assets/css/index.css">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js">
+        </script>
     </head>
 
     <body>
+        <div>
+            <div class="picture-row">
+                <img class="picture" src="../assets/images/Joe Gomez.jpeg">
+            </div>
+            <div class="picture-row">
+                <img class="picture" src="../assets/images/Naby Keita.jpeg">
+            </div>
+        </div>
 
 
         <script src="../assets/javascript/index.js"></script>
