click-image-points-total

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,11 +12,14 @@
 
     <body>
         <div>
+            <h1 class='total'>Total:</h1>
+        </div>
+        <div>
             <div class="picture-row">
-                <img class="picture" src="../assets/images/Joe Gomez.jpeg">
+                <img class="picture" id='gomez' src="../assets/images/Joe Gomez.jpeg">
             </div>
             <div class="picture-row">
-                <img class="picture" src="../assets/images/Naby Keita.jpeg">
+                <img class="picture" id='keita' src="../assets/images/Naby Keita.jpeg">
             </div>
         </div>
 
