similar-game-setup

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,9 +17,12 @@
         <div>
             <div class="picture-row">
                 <img class="picture" id='gomez' src="../assets/images/Joe Gomez.jpeg">
-            </div>
-            <div class="picture-row">
+
+                <!-- <div class="picture-row"> -->
                 <img class="picture" id='keita' src="../assets/images/Naby Keita.jpeg">
+
+                <!-- <div class="picture-row"> -->
+                <img class="picture" id='firmino' src="../assets/images/Roberto Firmino.jpeg">
             </div>
         </div>
 
