css-hover-smooth

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,10 @@
 
                 <!-- <div class="picture-row"> -->
                 <img class="picture" id='firmino' src="../assets/images/Roberto Firmino.jpeg">
+
+                <img class="picture" id='henderson' src="../assets/images/Jordan Henderson.jpeg">
+
+                <img class="picture" id='mane' src="../assets/images/Sadio Mane.jpeg">
             </div>
         </div>
 
