--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,10 @@
 
     <body>
         <div>
-            <h1 class='total'>Total:</h1>
+            <h1 class='total'></h1>
+            <h1 class='target-score'></h1>
+            <h1 class='wins'></h1>
+            <h1 class='losses'></h1>
         </div>
         <div>
             <div class="picture-row">
