--- a/pages/index.html
+++ b/pages/index.html
@@ -30,6 +30,8 @@
                 <img class="picture" id='henderson' src="../assets/images/Jordan Henderson.jpeg">
 
                 <img class="picture" id='mane' src="../assets/images/Sadio Mane.jpeg">
+
+                <img class="picture" id='salah' src="../assets/images/Mo Salah.jpeg">
             </div>
         </div>
 
