--- a/pages/index.html
+++ b/pages/index.html
@@ -6,12 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Picture Game</title>
         <link rel="stylesheet" type="text/css" href="../assets/css/index.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Monoton&display=swap">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js">
         </script>
     </head>
 
     <body>
-        <div>
+        <div class='scoreboard-row'>
             <h1 class='total'></h1>
             <h1 class='target-score'></h1>
             <h1 class='wins'></h1>
@@ -21,10 +22,8 @@
             <div class="picture-row">
                 <img class="picture" id='gomez' src="../assets/images/Joe Gomez.jpeg">
 
-                <!-- <div class="picture-row"> -->
                 <img class="picture" id='keita' src="../assets/images/Naby Keita.jpeg">
 
-                <!-- <div class="picture-row"> -->
                 <img class="picture" id='firmino' src="../assets/images/Roberto Firmino.jpeg">
 
                 <img class="picture" id='henderson' src="../assets/images/Jordan Henderson.jpeg">
