more-players-added

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Picture Game</title>
         <link rel="stylesheet" type="text/css" href="../assets/css/index.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Monoton&display=swap">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js">
         </script>
     </head>
@@ -31,6 +31,12 @@
                 <img class="picture" id='mane' src="../assets/images/Sadio Mane.jpeg">
 
                 <img class="picture" id='salah' src="../assets/images/Mo Salah.jpeg">
+
+                <img class="picture" id='van-dijk' src="../assets/images/Virgil Van Dijk.jpeg">
+
+                <img class="picture" id='robertson' src="../assets/images/Andy Robertson.jpeg">
+
+                <img class="picture" id='alisson' src="../assets/images/Alisson.jpeg">
             </div>
         </div>
 
