--- a/pages/index.html
+++ b/pages/index.html
@@ -37,6 +37,17 @@
                 <img class="picture" id='robertson' src="../assets/images/Andy Robertson.jpeg">
 
                 <img class="picture" id='alisson' src="../assets/images/Alisson.jpeg">
+
+                <img class="picture" id='ox' src="../assets/images/Oxlade Chamberlain.jpeg">
+
+                <img class="picture" id='fabinho' src="../assets/images/Fabinho.jpeg">
+
+                <img class="picture" id='gini' src="../assets/images/Gini Winjaldum.jpeg">
+
+                <img class="picture" id='milner' src="../assets/images/James Milner.jpeg">
+
+                <img class="picture" id='matip' src="../assets/images/Joel Matip.jpeg">
+
             </div>
         </div>
 
