working-instructions-modal

--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,30 @@
 
             </div>
         </div>
+        <div class="footer">
+            <button id='instructions'>
+                <h3>Instructions</h3>
+            </button>
+            <div id="instructions-modal" class="modal">
+                <div class="modal-content">
+                    <h2>Instructions</h2>
+                    <p>1. Each player is worth a random number of points 1-12</p>
+                    <p>2. To win, Liverpool's points must match the opposing teams points.</p>
+                    <p>3. If you go over the point total of the opposing team you lose.</p>
+                    <p>4. Yellow cards and red cards have random events to help or hurt your chances of winning.</p>
+                    <span class="close">Close</span>
+                </div>
+            </div>
+            <button id='yellow-card'>
+                <h3>Yellow Card</h3>
+            </button>
+            <button id='red-card'>
+                <h3>Red Card</h3>
+            </button>
+            <button id='new-team'>
+                <h3>New Opponent</h3>
+            </button>
+        </div>
 
 
         <script src="../assets/javascript/index.js"></script>
