yellow-card-modal

--- a/pages/index.html
+++ b/pages/index.html
@@ -67,6 +67,12 @@
             <button id='yellow-card'>
                 <h3>Yellow Card</h3>
             </button>
+            <div id="yellow-card-modal" class="modal">
+                <div class="modal-content">
+                    <h2>Yellow Card</h2>
+                    <span class="close">Close</span>
+                </div>
+            </div>
             <button id='red-card'>
                 <h3>Red Card</h3>
             </button>
