yellow-card-add-points-and-syle-win-modal

--- a/pages/index.html
+++ b/pages/index.html
@@ -69,7 +69,10 @@
             </button>
             <div id="yellow-card-modal" class="modal">
                 <div class="modal-content">
-                    <h2>Yellow Card</h2>
+                    <h2 id="yellow-card-title">Yellow Card</h2>
+                    <div>
+                        <span class="card-content"></span>
+                    </div>
                     <span class="close">Close</span>
                 </div>
             </div>
@@ -79,6 +82,14 @@
             <button id='new-team'>
                 <h3>New Opponent</h3>
             </button>
+        </div>
+
+        <div id="win-modal" class="modal">
+            <div class="modal-content" id="win-modal-background">
+                <h2>Liverpool wins!</h2>
+                <span class="close" id="win-close">Close</span>
+
+            </div>
         </div>
 
 
