--- a/pages/index.html
+++ b/pages/index.html
@@ -79,6 +79,15 @@
             <button id='red-card'>
                 <h3>Red Card</h3>
             </button>
+            <div id="red-card-modal" class="modal">
+                <div class="modal-content">
+                    <h2 id="red-card-title">Red Card</h2>
+                    <div>
+                        <span class="card-content"></span>
+                    </div>
+                    <span class="close">Close</span>
+                </div>
+            </div>
             <button id='new-team'>
                 <h3>New Opponent</h3>
             </button>
