close-modal-design-work

--- a/pages/index.html
+++ b/pages/index.html
@@ -61,6 +61,7 @@
                     <p>2. To win, Liverpool's points must match the opposing teams points.</p>
                     <p>3. If you go over the point total of the opposing team you lose.</p>
                     <p>4. Yellow cards and red cards have random events to help or hurt your chances of winning.</p>
+                    <p>5. If Liverpool recieves a red card, some players will no longer be available to choose.</p>
                     <span class="close">Close</span>
                 </div>
             </div>
