clicks-working-in-game

--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,9 @@
 
             </div>
         </div>
+        <div class="clicks-box">
+            <div class='counter'></div>
+        </div>
         <div class="footer">
             <button id='instructions'>
                 <h3>Instructions</h3>
