moved index outside of pages folder and deleted pages folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class='total'></h1>
             <h1 class='target-score'></h1>
             <h1 class='wins'></h1>
-            <h1 class='losses'></h1>
+            <h1 class='losses'>h</h1>
         </div>
         <div class="clicks-box">
             <div class='counter'></div>
